--- a/web/themes/custom/particle/source/_patterns/00-protons/demo/welcome.twig
+++ b/web/themes/custom/particle/source/_patterns/00-protons/demo/welcome.twig
@@ -3,16 +3,15 @@
     <div>
 
       {# this spinner styles are hardcoded in the 00-head, it disappears when webpack bundles. #}
-      <div class="spinner">
-        <div class="double-bounce1"></div>
-        <div class="double-bounce2"></div>
-      </div>
 
-
-      <h1 class="mb-4">Welcome to the City of Portland Oregon Pattern Lab</h1>
-
-      <p class="mt-4">In this site, you can explore the patterns designed by our team.</p>
-    </div>
+      {% block column_1 %}
+        {% include "@atoms/_branding.twig" with {
+          url: '#',
+          logo_svg_inline: '@atoms/image/logo.svg',
+          site_name: 'ParCity of Portland Oregon Pattern Labticle',
+          site_slogan: 'In this site, you can explore the patterns designed by our team.'
+        } %}
+      {% endblock column_1 %}
 
   {% endblock column_1 %}
 {% endembed %}
