--- a/web/themes/custom/particle/apps/drupal/templates/navigation/breadcrumb.html.twig
+++ b/web/themes/custom/particle/apps/drupal/templates/navigation/breadcrumb.html.twig
@@ -9,6 +9,6 @@
 #}
 {% if breadcrumb %}
 
-  {% include "@atoms/_breadcrumb.twig" %}
+  {% include "../../source/_patterns/01-atoms/breadcrumb/_breadcrumb.twig" %}
 
 {% endif %}
