Changes to try and correct twig errors.

--- a/web/themes/custom/particle/apps/drupal/templates/block/block--basic--card.html.twig
+++ b/web/themes/custom/particle/apps/drupal/templates/block/block--basic--card.html.twig
@@ -45,4 +45,4 @@
   }
 %}
 
-{% include '@molecules/_card.twig' with block_card %}
+{% include '../../source/_patterns/02-molecules/card/_card.twig' with block_card %}
