--- a/web/themes/custom/particle/apps/drupal/templates/content/node--article--teaser.html.twig
+++ b/web/themes/custom/particle/apps/drupal/templates/content/node--article--teaser.html.twig
@@ -83,4 +83,4 @@
   }
 } %}
 
-{% include '@molecules/card/_card.twig' with article_card %}
+{% include '../../source/_patterns/02-molecules/card/_card.twig' with article_card %}
