--- a/web/themes/custom/particle/apps/drupal/templates/layout/page.html.twig
+++ b/web/themes/custom/particle/apps/drupal/templates/layout/page.html.twig
@@ -52,7 +52,7 @@
 
 {% if page.header_branding %}
   <header role="banner">
-    {% embed '@molecules/jumbotron/_jumbotron.twig' with { jumbotron_fluid: true } %}
+    {% embed '../../source/_patterns/02-molecules/jumbotron/_jumbotron.twig' with { jumbotron_fluid: true } %}
       {% block jumbotron_branding %}
         {{ page.header_branding }}
         {{ page.secondary_menu }}
