--- a/web/themes/custom/particle/apps/drupal/templates/layout/region--primary-menu.html.twig
+++ b/web/themes/custom/particle/apps/drupal/templates/layout/region--primary-menu.html.twig
@@ -23,7 +23,7 @@
 {% if content %}
   {# The Primary Menu region requires our Nav wrapper, which we've removed from block--system-menu-block.html.twig #}
   {# This was done to insure the content array matches what Bootstrap 4 expects - an unordered list representing our menu and the Search block #}
-  {% embed '@organisms/navbar/_navbar.twig' %}
+  {% embed '@organisms/_navbar.twig' %}
     {% set navbar_arialebelledby = 'block-particle-mainnavigation-menu' %}
     {% set navbar_attributes = attributes.addClass(navbar_classes) %}
 
