--- a/web/themes/custom/particle/source/_patterns/02-molecules/nav/_nav.twig
+++ b/web/themes/custom/particle/source/_patterns/02-molecules/nav/_nav.twig
@@ -34,9 +34,9 @@
 <{{ nav_element }} class="{{ nav_classes }}" {{ nav_id }} {{ nav_role }}>
   {% for item in nav_items %}
     {% if item.nav_item_dropdown %}
-      {% include '@atoms/dropdown/_dropdown.twig' with item %}
+      {% include '../../source/_patterns/01-atoms/dropdown/_dropdown.twig' with item %}
     {% else %}
-      {% include '@molecules/nav/_nav-item.twig' with item %}
+      {% include '../../source/_patterns/02-molecules/nav/_nav-item.twig' with item %}
     {% endif %}
   {% endfor %}
 </{{ nav_element }}>
