POWR-78 tabs and steps part one.

--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -6,3 +6,13 @@
  .site-name-slogan a {
     color:#ffffff;
  }
+li.step::marker li.step::before {
+    content: counter(step-counter);
+    margin-right: 20px;
+    font-size: 2rem;
+    background-color: #808080;
+    color: white;
+    font-weight: bold;
+    padding: 3px 8px;
+    border-radius: 11px;
+  }
