Add button styling and custom twig templates

--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -3,6 +3,43 @@
  * Subtheme specific CSS.
  */
 
- .site-name-slogan a {
-    color:#ffffff;
- }
+.site-name-slogan a {
+  color: #ffffff;
+}
+
+.btn-secondary {
+  background: #046A38;
+  border: none;
+}
+
+.btn-secondary:hover {
+  background: #034E29;
+}
+
+a[class*="btn--"]:before,
+div[class*="btn--"]:before {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 0.5rem;
+  vertical-align: middle;
+}
+
+.btn--form:before {
+  content: "\f022";
+}
+
+.btn--email:before {
+  content: "\f0e0";
+}
+
+.btn--call:before {
+  content: "\f095";
+}
+
+.btn--download:before {
+  content: "\f019";
+}
+
+.btn--directions:before {
+  content: "\f041";
+}
