POWR-78 add twig templates and update configuration with latest updates.

--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -6,13 +6,44 @@
  .site-name-slogan a {
     color:#ffffff;
  }
-li.step::marker li.step::before {
-    content: counter(step-counter);
-    margin-right: 20px;
-    font-size: 2rem;
-    background-color: #808080;
-    color: white;
-    font-weight: bold;
-    padding: 3px 8px;
-    border-radius: 11px;
-  }
+ ol.steps {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+li.step {
+  counter-increment: step-counter;
+  margin-bottom: 3rem;
+}
+
+ol.steps li.step::before {
+  content: counter(step-counter);
+  margin-right: .5rem;
+  font-size: 1.5rem;
+  border: 1px #505050 solid;
+  color: #505050;
+  font-weight: bold;
+  padding: .5rem 1rem;
+  border-radius: 50%;
+}
+
+li.step h3.step-title {
+  display: inline;
+}
+
+.field--name-field-step-instruction, .field--name-field-step-action-button {
+  margin-left: 4rem;
+}
+
+.time-to-complete {
+  margin-top: 1rem;
+}
+
+p.time-to-complete:before {
+ font-family: FontAwesome;
+ display: inline-block;
+ padding-right: 0.5rem;
+ vertical-align: middle;
+ content: "\f017";
+}
