--- a/web/themes/custom/stormy/templates/field/field--paragraph--field-step-by-step-instructions.html.twig
+++ b/web/themes/custom/stormy/templates/field/field--paragraph--field-step-by-step-instructions.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Theme override for the step title field.
+ * Theme override for the step by step instructions field.
  *
  * This is an override of field.html.twig for the step title field. See that
  * template for documentation about its details and overrides.
@@ -19,9 +19,13 @@
  * @see field.html.twig
  */
 #}
-
-<ol class="steps">
-  {% for item in items %}
+{%
+  set classes = [
+    'steps'
+  ]
+%}
+<ol{{ attributes.addClass(classes) }}>
+  {%- for item in items -%}
     {{ item.content }}
-  {% endfor %}
+  {%- endfor -%}
 </ol>
