--- a/web/themes/custom/stormy/templates/field/field--paragraph--field-time-to-complete.html.twig
+++ b/web/themes/custom/stormy/templates/field/field--paragraph--field-time-to-complete.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Theme override for the city service service mode field.
+ * Theme override for the step by step instructions field.
  *
  * This is an override of field.html.twig for the step title field. See that
  * template for documentation about its details and overrides.
@@ -19,9 +19,13 @@
  * @see field.html.twig
  */
 #}
-
-<ul class="nav nav-tabs" id="service-modes" role="tablist">
-  {% for item in items %}
+{%
+  set classes = [
+    'time-to-commplete'
+  ]
+%}
+<p{{ attributes.addClass(classes) }}>
+  {%- for item in items -%}
     {{ item.content }}
-  {% endfor %}
-</ul>
+  {%- endfor -%}
+</p>
