--- a/web/themes/custom/stormy/templates/content/node--city-service.html.twig
+++ b/web/themes/custom/stormy/templates/content/node--city-service.html.twig
@@ -106,8 +106,9 @@
     <div class="tab-content" id="serviceModesContent">
       {% for key, item in content.field_service_mode if key|first != '#' %}
         <div class="tab-pane fade{% if loop.first %} show active{% endif %}" id="{{ loop.index }}" role="tabpanel" aria-labelledby="{{ loop.index }}-tab">
-          <p class="time-to-complete">{{ item['#paragraph'].field_time_to_complete.value }}</p>
-          {# {{ item['#paragraph'].field_step_by_step_instructions.entity|render(default) }} #}
+          {% if item['#paragraph'].field_time_to_complete.value is not empty %}
+            <p class="time-to-complete">{{ item['#paragraph'].field_time_to_complete.value }}</p>
+          {% endif %}
           <ol class="steps">
           {% for step in item['#paragraph'].field_step_by_step_instructions %}
             {{ drupal_entity('paragraph', step.target_id) }}
