--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -47,3 +47,44 @@ p.time-to-complete:before {
  vertical-align: middle;
  content: "\f017";
 }
+
+/* ------------ form buttons  ------------ */
+
+.btn-secondary {
+  background: #046A38;
+  border: none;
+}
+
+.btn-secondary:hover {
+  background: #034E29;
+}
+
+a[class*="btn--"]:before,
+div[class*="btn--"]:before {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 0.5rem;
+  vertical-align: middle;
+}
+
+.btn--call:before {
+  content: "\f095";
+}
+
+.btn--directions:before {
+  content: "\f041";
+}
+
+.btn--download:before {
+  content: "\f019";
+}
+
+.btn--email:before {
+  content: "\f0e0";
+}
+
+.btn--form:before {
+  content: "\f022";
+}
+
+/* ------------  /end form buttons    ------------*/
