POWR-76 style step title to include bottom margin

--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -29,7 +29,7 @@ ol.steps li.step::before {
 }
 
 li.step h3.step-title {
-  display: inline;
+  display: inline-block;
 }
 
 .field--name-field-step-instruction, .field--name-field-step-action-button {
