POWR-165 switch admin theme to seven and update homepage views with cards approach.

--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -6,7 +6,7 @@
  .site-name-slogan a {
     color:#ffffff;
  }
-<<<<<<< HEAD
+ 
  ol.steps {
   margin: 0;
   padding: 0;
@@ -89,8 +89,10 @@ div[class*="btn--"]:before {
 }
 
 /* ------------  /end form buttons    ------------*/
-=======
 td .form-check-input {
     margin-left: 0rem;
 }
->>>>>>> POWR-165 clean up the group content view and uninstall Bootstrap module.
+
+a.topic {
+  color: #ffffff;
+}
