POWR-165 cleaning up some changes that were blitzed by rebase.

--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -93,6 +93,15 @@ td .form-check-input {
     margin-left: 0rem;
 }
 
+a.community-action, a.topic, a.audience{
+  font-size: 1.5rem !important;
+  font-weight: 200 !important;
+}
+
+a.community-action {
+  color: #ffffff;
+}
+
 a.topic {
   color: #ffffff;
 }
