POWR-178 Services should have a related services field

--- a/web/themes/custom/stormy/templates/content/node--city-service.html.twig
+++ b/web/themes/custom/stormy/templates/content/node--city-service.html.twig
@@ -120,6 +120,7 @@
   </div>
   <hr />
   {{ content.field_audience }}
+  {{ content.field_related_services }}
   {{ content.field_community_actions }}
   {{ content.field_topics }}
 </article>
