--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -114,3 +114,13 @@ a.topic {
   margin-left: 1rem;
   margin-right: 1rem;
 }
+
+.block-copyright-block {
+  background:url(/themes/custom/stormy/images/city-seal.png) no-repeat center right;
+  width: 100%;
+  min-height: 220px;
+}
+
+.site-footer__top .region {
+  width: 50%;
+}
