POWR-199 Theme updates and config changes for demo.

--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -116,11 +116,39 @@ a.topic {
 }
 
 .block-copyright-block {
-  background:url(/themes/custom/stormy/images/city-seal.png) no-repeat center right;
+  background:url(/themes/custom/stormy/images/city-seal.png) no-repeat bottom right;
   width: 100%;
   min-height: 200px;
 }
 
-.site-footer__top .region {
-  width: 50%;
+.view-header {
+  margin-bottom: 1rem;
+}
+
+.view-content .list-group {
+  margin-left: -1rem;
+  margin-right: 1rem;
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+}
+
+.form-inline {
+  margin-bottom: 1rem;
+}
+
+.form-inline label {
+  justify-content: left;
+}
+
+.form-inline .form-group {
+  margin-right: 1rem;
+}
+
+.form-inline .form-actions {
+  align-items: bottom !important;
+}
+
+.block-copyright-block p{
+  float: right;
+  text-align: right;
 }
