--- a/web/themes/custom/stormy/templates/layout/page.html.twig
+++ b/web/themes/custom/stormy/templates/layout/page.html.twig
@@ -117,9 +117,6 @@
     <div id="main-wrapper" class="layout-main-wrapper clearfix">
       {% block content %}
         <div id="main" class="{{ container }}">
-          {% if page.breadcrumb %}
-            {{ page.breadcrumb }}
-          {% endif %}
           <div class="row row-offcanvas row-offcanvas-left clearfix">
               <main{{ content_attributes }}>
                 <section class="section">
@@ -156,13 +153,17 @@
     {% endif %}
     <footer class="site-footer bg-light text-dark">
       {% block footer %}
-        <div class="{{ container }}">
-          {% if page.footer_first or page.footer_second %}
-            <div class="site-footer__top clearfix">
-              {{ page.footer_first }}
-              {{ page.footer_second }}
-            </div>
-          {% endif %}
+        <div class="container">
+          <div class="row">
+            {% if page.footer_first or page.footer_second %}
+              <div class="col-sm-6">
+                {{ page.footer_first }}
+              </div>
+              <div class="col-sm-6">
+                {{ page.footer_second }}
+              </div>
+            {% endif %}
+          </div>
         </div>
       {% endblock %}
     </footer>
