POWR-199 A few more changes to prep for demo. :

--- a/web/themes/custom/bootstrap_barrio/css/components/site-footer.css
+++ b/web/themes/custom/bootstrap_barrio/css/components/site-footer.css
@@ -5,7 +5,8 @@
 
 .site-footer {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  padding: 35px 0 30px;
+  padding: .5rem 0 .5rem;
+  margin-top: 1rem;
 }
 .site-footer .layout-container {
   padding: 0 15px;
