--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -19,7 +19,7 @@ td .form-check-input {
 
 li.step {
   counter-increment: step-counter;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 }
 
 ol.steps li.step::before {
@@ -39,10 +39,6 @@ li.step h3.step-title {
 
 .field--name-field-step-instruction, .field--name-field-step-action-button {
   margin-left: 4rem;
-}
-
-.time-to-complete {
-  margin-top: 1rem;
 }
 
 p.time-to-complete:before {
@@ -151,4 +147,12 @@ a.topic {
 .block-copyright-block p{
   float: right;
   text-align: right;
+}
+
+.layout-main-wrapper{
+  margin-top: 1.25rem;
+}
+
+.tab-content {
+  padding-top: 1rem;
 }
