--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -60,8 +60,7 @@ p.time-to-complete:before {
   background: #034E29;
 }
 
-a[class*="btn--"]:before,
-div[class*="btn--"]:before {
+*[class*="btn--"]:before {
   font-family: FontAwesome;
   display: inline-block;
   padding-right: 0.5rem;
@@ -82,6 +81,14 @@ div[class*="btn--"]:before {
 
 .btn--email:before {
   content: "\f0e0";
+}
+
+.btn--fax:before {
+  content: "\f1ac";
+}
+
+.btn--fax:not(.disabled):hover {
+  cursor: default;
 }
 
 .btn--form:before {
