POWR-153 Added summary field and moved time to complete outsite of service modes

--- a/web/themes/custom/stormy/templates/content/node--city-service.html.twig
+++ b/web/themes/custom/stormy/templates/content/node--city-service.html.twig
@@ -93,6 +93,8 @@
       </div>
     {% endif %}
   </header>
+  {{ content.field_summary }}
+  {{ content.field_time_to_complete }}
   <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
     <ul class="nav nav-tabs" id="serviceModes" role="tablist">
       {% for key, item in content.field_service_mode if key|first != '#' %}
