--- a/web/themes/custom/stormy/templates/fields/field--field-summary.html.twig
+++ b/web/themes/custom/stormy/templates/fields/field--field-summary.html.twig
@@ -1,9 +1,9 @@
 {#
 /**
  * @file
- * Theme override for the time to complete field.
+ * Theme override for the summary field.
  *
- * This is an override of field.html.twig for the time to complete field. See that
+ * This is an override of field.html.twig for the summary field. See that
  * template for documentation about its details and overrides.
  *
  * Available variables:
@@ -21,7 +21,7 @@
 #}
 {%
   set classes = [
-    'time-to-complete'
+    'summary'
   ]
 %}
 <p{{ attributes.addClass(classes) }}>
