POWR-153 Hide old action, audience, and topic blocks. Add related services and categories blocks/views to sidebar. Dynamically select list type based on number of steps.

--- a/web/themes/custom/stormy/templates/content/node--city-service.html.twig
+++ b/web/themes/custom/stormy/templates/content/node--city-service.html.twig
@@ -108,10 +108,8 @@
     <div class="tab-content" id="serviceModesContent">
       {% for key, item in content.field_service_mode if key|first != '#' %}
         <div class="tab-pane fade{% if loop.first %} show active{% endif %}" id="{{ loop.index }}" role="tabpanel" aria-labelledby="{{ loop.index }}-tab">
-          {% if item['#paragraph'].field_time_to_complete.value is not empty %}
-            <p class="time-to-complete">{{ item['#paragraph'].field_time_to_complete.value }}</p>
-          {% endif %}
-          <ol class="steps">
+          {% set list_elem = item['#paragraph'].field_step_by_step_instructions|length == 1 ? 'ul' : 'ol' %}
+          <{{ list_elem }} class="steps">
           {% for step in item['#paragraph'].field_step_by_step_instructions %}
             {{ drupal_entity('paragraph', step.target_id) }}
           {% endfor %}
@@ -120,7 +118,9 @@
       {% endfor %}
     </div>
   </div>
+  {# Hide hr now that these fields are disabled
   <hr />
+  #}
   {{ content.field_audience }}
   {{ content.field_related_services }}
   {{ content.field_community_actions }}
