POWR-153 Use div for single step services instead of a list

--- a/web/themes/custom/stormy/templates/content/node--city-service.html.twig
+++ b/web/themes/custom/stormy/templates/content/node--city-service.html.twig
@@ -108,12 +108,15 @@
     <div class="tab-content" id="serviceModesContent">
       {% for key, item in content.field_service_mode if key|first != '#' %}
         <div class="tab-pane fade{% if loop.first %} show active{% endif %}" id="{{ loop.index }}" role="tabpanel" aria-labelledby="{{ loop.index }}-tab">
-          {% set list_elem = item['#paragraph'].field_step_by_step_instructions|length == 1 ? 'ul' : 'ol' %}
-          <{{ list_elem }} class="steps">
-          {% for step in item['#paragraph'].field_step_by_step_instructions %}
-            {{ drupal_entity('paragraph', step.target_id) }}
-          {% endfor %}
-          </ol>
+          {% if item['#paragraph'].field_step_by_step_instructions|length == 1 %}
+            <div class="onestep">{{ drupal_entity('paragraph', 1) }}</div>
+          {% else %}
+            <ol class="steps">
+            {% for step in item['#paragraph'].field_step_by_step_instructions %}
+              <li class="step">{{ drupal_entity('paragraph', step.target_id) }}</li>
+            {% endfor %}
+            </ol>
+          {% endif %}
         </div>
       {% endfor %}
     </div>
