POWR-182 clean up a template issue from POWR-153.

--- a/web/themes/custom/stormy/templates/content/node--city-service.html.twig
+++ b/web/themes/custom/stormy/templates/content/node--city-service.html.twig
@@ -109,7 +109,9 @@
       {% for key, item in content.field_service_mode if key|first != '#' %}
         <div class="tab-pane fade{% if loop.first %} show active{% endif %}" id="{{ loop.index }}" role="tabpanel" aria-labelledby="{{ loop.index }}-tab">
           {% if item['#paragraph'].field_step_by_step_instructions|length == 1 %}
-            <div class="onestep">{{ drupal_entity('paragraph', 1) }}</div>
+            {% for step in item['#paragraph'].field_step_by_step_instructions %}
+              <div class="onestep">{{ drupal_entity('paragraph', step.target_id) }}</div>
+            {% endfor %}
           {% else %}
             <ol class="steps">
             {% for step in item['#paragraph'].field_step_by_step_instructions %}
