POWR-87 Add Created and Updated label. Remove paragraph text separator.

--- a/web/themes/custom/stormy/templates/content/node--news.html.twig
+++ b/web/themes/custom/stormy/templates/content/node--news.html.twig
@@ -97,9 +97,9 @@
     {{ content }}
   </div>
   <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
-    {{ node.createdtime | format_date('medium') }}
+    Created at {{ node.createdtime | format_date('medium') }}
   </div>
   <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
-    {{ node.changedtime | format_date('medium') }}
+    Updated at {{ node.changedtime | format_date('medium') }}
   </div>
 </article>
