POWR-156-2 A little minor theming to add whitespace around search form buttons and pagination links

--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -95,6 +95,10 @@ p.time-to-complete:before {
   content: "\f022";
 }
 
+.form-actions button.btn {
+  margin-right: .5rem;
+}
+
 /* ------------  /end form buttons    ------------*/
 td .form-check-input {
     margin-left: 0rem;
@@ -162,4 +166,8 @@ a.topic {
 
 .tab-content {
   padding-top: 1rem;
+}
+
+ul.pagination {
+  margin-top: 1rem;
 }
