POWR-195 style service location teasers; also fixes POWR-225 and POWR-226.

--- a/web/themes/custom/stormy/css/style.css
+++ b/web/themes/custom/stormy/css/style.css
@@ -18,27 +18,40 @@ td .form-check-input {
 }
 
 li.step {
+  position: relative;
   counter-increment: step-counter;
   margin-bottom: 1rem;
 }
 
-ol.steps li.step::before {
+li.step:before {
   content: counter(step-counter);
-  margin-right: .5rem;
+  position: absolute;
+  left: 0;
+  top: 0;
   font-size: 1.5rem;
-  border: 1px #505050 solid;
+  border: 1px #909090 solid;
   color: #505050;
   font-weight: bold;
-  padding: .5rem 1rem;
+  padding: .3rem 1rem;
   border-radius: 50%;
 }
 
 li.step h3.step-title {
-  display: inline-block;
+  position: relative;
+  margin-left: 4rem;
 }
 
 .field--name-field-step-instruction, .field--name-field-step-action-button {
   margin-left: 4rem;
+}
+
+ol.steps dl, ol.steps ol, ol.steps ul {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
+  margin-bottom: 0;
 }
 
 p.time-to-complete:before {
