POWR-195 Small fix to some spacing on the building and floor fields.

--- a/web/themes/custom/stormy/templates/content/node--service-location--teaser.html.twig
+++ b/web/themes/custom/stormy/templates/content/node--service-location--teaser.html.twig
@@ -10,7 +10,7 @@
 <h4{{ title_attributes.addClass('service-location') }}>
   <a href="{{ url }}" rel="bookmark">{{ label }}</a>
 </h4>
-<p>{{ content.field_building }}<br />
-{{ content.field_floor}}</p>
+{{ content.field_building }}
+{{ content.field_floor}}
 <p>{{ content.field_open_hours}}</p>
 <p>{{ content.field_get_directions}}</p>
