--- a/web/themes/custom/rain/source/_patterns/03-organisms/site/site-header/site-header.twig
+++ b/web/themes/custom/rain/source/_patterns/03-organisms/site/site-header/site-header.twig
@@ -1,5 +1,10 @@
-<header class="header">
-  <div class="navigation">
-    {{ content }}
-  </div>
-</header>
+{% set content %}
+  {% include "@molecules/branding/01-brand.twig" with {
+    "url": "#",
+    "brand_prefix": "The",
+    "brand_main": "City of Portland",
+    "brand_suffix": "Oregon",
+  } %}
+  {% include "@molecules/menus/main-menu/main-menu.twig" %}
+{% endset %}
+{% include "@organisms/site/site-header/_header.twig" %}
