--- a/web/themes/custom/rain/source/_patterns/03-organisms/site/site-header/_header.scss
+++ b/web/themes/custom/rain/source/_patterns/03-organisms/site/site-header/_header.scss
@@ -7,6 +7,10 @@
 
     .link {
         color: $gray-lighter;
+        
+        .h1 {
+            margin: 0;
+        }
     }
 }
 .header .navigation {
