POWR-215 Adding site header styles

--- a/web/themes/custom/rain/source/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/web/themes/custom/rain/source/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -7,3 +7,7 @@ $gray: #666;
 $gray-dark: #4c4c4c;
 $gray-darker: #333;
 $black: black;
+
+$primary: #046A38;
+$secondary: #418FDE;
+$tertiary: #FFB81C;
