--- a/web/themes/custom/rain/source/_patterns/02-molecules/branding/_brand.scss
+++ b/web/themes/custom/rain/source/_patterns/02-molecules/branding/_brand.scss
@@ -1,5 +1,21 @@
 .link--site-brand {
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  text-decoration: none;
+  padding-left: $space-double;
+  h1 {
+    color: $white;
+    font-weight: 200;
+  }
+  em {
+    color: $white;
+  }
+  em:first-of-type {
+    margin-right: 0.5rem;
+    ;
+  }
+  em:last-of-type {
+    margin-left: 0.5rem;
+  }
 }
