--- a/web/themes/custom/rain/source/_patterns/02-molecules/menus/main-menu/_01-main-menu-item.scss
+++ b/web/themes/custom/rain/source/_patterns/02-molecules/menus/main-menu/_01-main-menu-item.scss
@@ -11,7 +11,7 @@
 
     // Only top level
     &:not(.main-menu__item--sub):hover {
-      background-color: $black;
+      background-color: darken($primary, 5%);
       transition: all 0.2s;
 
       & > .main-menu--sub {
