--- a/web/themes/custom/rain/source/_patterns/02-molecules/menus/main-menu/_02-main-menu-link.scss
+++ b/web/themes/custom/rain/source/_patterns/02-molecules/menus/main-menu/_02-main-menu-link.scss
@@ -4,7 +4,7 @@
   display: block;
   font-size: 1.2rem;
   line-height: 1.5;
-  padding: $space $space-triple $space $space-double;
+  padding: $space $space-double;
   text-decoration: none;
   font-weight: bold;
 
@@ -17,7 +17,7 @@
     color: $gray-dark;
     display: inline-block;
     font-size: 1.1rem;
-    padding: $space $space-double $space $space;
+    padding: $space $space-double;
     text-transform: none;
     position: relative;
     width: auto;
@@ -28,11 +28,11 @@
       color: $gray-lighter;
     }
 
-    &::after {
-      color: $white;
-      display: inline-block;
-      content: ">";
-    }
+    // &::after {
+    //   color: $white;
+    //   display: inline-block;
+    //   content: ">";
+    // }
 
     &--sub::after {
       display: none;
