--- a/web/themes/custom/rain/source/_patterns/05-pages/_page.scss
+++ b/web/themes/custom/rain/source/_patterns/05-pages/_page.scss
@@ -2,7 +2,12 @@
 // General Layout (example code)
 //
 
-.header,
+.header {
+  max-width: 100%;
+  width: 100%;
+  margin: 0 auto;
+}
+
 .main,
 .footer {
   @include wrapper;
