POWR-214 Cleanup pattern styling

--- a/web/themes/custom/rain/source/_patterns/02-molecules/branding/_brand.scss
+++ b/web/themes/custom/rain/source/_patterns/02-molecules/branding/_brand.scss
@@ -3,13 +3,8 @@
   flex-direction: row;
   align-items: baseline;
   text-decoration: none;
-  padding-left: $space-double;
-  h1 {
-    color: $white;
-    font-weight: 200;
-  }
-  em {
-    color: $white;
+  h1, em {
+    font-weight: 400;
   }
   em:first-of-type {
     margin-right: 0.5rem;
