--- a/web/themes/custom/rain/source/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/web/themes/custom/rain/source/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -1,7 +1,10 @@
 //  Empty
 .header {
-  li a {
+  .link--site-brand {
+    padding-left: $space-double;
+  }
+  h1, em, li a {
     color: $white;
-    font-weight: 100;
+    font-weight: 200;
   }
 }
