POWR-246 Update theme colors

--- a/web/themes/custom/rain/source/_patterns/00-utilities/global/01-colors/_color-vars.scss
+++ b/web/themes/custom/rain/source/_patterns/00-utilities/global/01-colors/_color-vars.scss
@@ -1,4 +1,4 @@
-$white: white;
+$white: #fff;
 $near-white: #f2f2f2;
 $gray-lightest: #e5e5e5;
 $gray-lighter: #ccc;
@@ -10,7 +10,9 @@ $black: #000;
 $default: #bdbdbd;
 $primary: #046a38;
 $secondary: #418fde;
+$tertiary: #f0ad4e;
 $info: #5bc0de;
 $success: #8acc96;
 $warning: #f0ad4e;
 $danger: #a72925;
+$clickable: #1b5998;
