--- a/web/themes/custom/rain/source/_patterns/00-utilities/global/01-colors/_colors-used.scss
+++ b/web/themes/custom/rain/source/_patterns/00-utilities/global/01-colors/_colors-used.scss
@@ -1,5 +1,3 @@
 $color-border: $gray-light;
-$color-link: $gray-darker;
-$color-link--hover: $gray-light;
-
+$color-link: $clickable;
 $color-heading: $gray-darker;
