--- a/web/themes/custom/rain/source/_patterns/00-utilities/_01-variables.scss
+++ b/web/themes/custom/rain/source/_patterns/00-utilities/_01-variables.scss
@@ -4,14 +4,19 @@
 // components/_patterns/00-utilities/global/01-colors/_color-vars.scss
 // and breakpoint related vars into
 // components/_patterns/00-utilities/_breakpoints.scss
-
 // Fonts
-$font-body: 'HelveticaNeue', 'Helvetica', 'Arial', sans-serif;
-$font-heading: 'HelveticaNeue', 'Helvetica', 'Arial', sans-serif;
-
+@import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+$font-body: 'Open Sans',
+'Helvetica',
+'Arial',
+sans-serif;
+$font-heading: 'Merriweather',
+'Helvetica',
+'Arial',
+sans-serif;
 // Spacing
 $space: 1rem;
-
 // times
 $space-double: $space * 2;
 $space-triple: $space * 3;
@@ -19,7 +24,6 @@ $space-quadruple: $space * 4;
 $space-quintuple: $space * 5;
 $space-sextuple: $space * 6;
 $space-septuple: $space * 7;
-
 // divided
 $space-one-half: $space/2;
 $space-one-third: $space/3;
