POWR-246 Convert base patterns to elements

--- a/web/themes/custom/rain/source/_patterns/02-elements/menus/tabs/tabs.twig
+++ b/web/themes/custom/rain/source/_patterns/02-elements/menus/tabs/tabs.twig
@@ -27,7 +27,7 @@
     <div id="tabs" class="tabs no-js">
         <ul class="tabs__nav">
             {% for key, listItem in listItems.three %}
-                {% include "@base/09-menu/tab/tab.twig" with {
+                {% include "@elements/09-menu/tab/tab.twig" with {
         tab_link: "#tab-" ~ key,
         tab_text: listItem.month.long
       } %}
