--- a/web/themes/custom/rain/source/_patterns/03-components/accordion/accordion.twig
+++ b/web/themes/custom/rain/source/_patterns/03-components/accordion/accordion.twig
@@ -1,4 +1,4 @@
-{% include "@base/03-lists/02-dl.twig" with {
+{% include "@elements/03-lists/02-dl.twig" with {
     dl_modifiers : accordion_modifiers,
     dl_blockname: accordion_blockname,
     dl_base_class: 'accordion',
