--- a/web/themes/custom/rain/source/_patterns/02-elements/menus/_menu.twig
+++ b/web/themes/custom/rain/source/_patterns/02-elements/menus/_menu.twig
@@ -40,7 +40,7 @@
         {% endif %}
 
         {# List #}
-        {% embed "@base/03-lists/00-ul.twig" with {
+        {% embed "@elements/03-lists/00-ul.twig" with {
             ul_base_class : menu_class,
             ul_modifiers: menu_modifiers,
             ul_blockname: menu_blockname
