POWR-90 correct some news issues.

--- a/web/themes/custom/stormy/templates/content/node--news.html.twig
+++ b/web/themes/custom/stormy/templates/content/node--news.html.twig
@@ -96,10 +96,10 @@
   <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
     {{ content }}
   </div>
-  <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
-    Created at {{ node.createdtime | format_date('medium') }}
+  <div{{ content_attributes.addClass('created', 'clearfix') }}>
+    Created {{ node.createdtime | format_date('long') }}.
   </div>
-  <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
-    Updated at {{ node.changedtime | format_date('medium') }}
+  <div{{ content_attributes.addClass('updated', 'clearfix') }}>
+    Updated {{ node.changedtime | format_date('long') }}.
   </div>
 </article>
