--- a/web/themes/custom/stormy/templates/layout/page.html.twig
+++ b/web/themes/custom/stormy/templates/layout/page.html.twig
@@ -69,6 +69,13 @@
 #}
 <div id="page-wrapper">
   <div id="page">
+    {% if page.alerts %}
+      <div class="alerts">
+        <aside class="{{ container }} section clearfix" role="complementary">
+          {{ page.alerts }}
+        </aside>
+      </div>
+    {% endif %}
     <header id="header" class="header" role="banner" aria-label="{{ 'Site header'|t}}">
       {% block head %}
         <nav{{ navbar_attributes }}>
