POWR-245 Add webpack source maps output to theme

--- a/web/themes/custom/rain/source/_meta/_01-foot.twig
+++ b/web/themes/custom/rain/source/_meta/_01-foot.twig
@@ -12,7 +12,7 @@
   <!-- <script src="../../js/ready.min.js"></script> -->
   <!-- <script src="../../js/drupal.js"></script> -->
 
-  <script src="../../js/main.js"></script>
+  <script src="../../js/main.bundle.js"></script>
 
   <!-- If using Drupal.behaviors, uncomment for them to work in Pattern Lab -->
   <!-- <script>Drupal.attachBehaviors();</script> -->
