--- a/web/themes/custom/rain/source/_meta/_00-head.twig
+++ b/web/themes/custom/rain/source/_meta/_00-head.twig
@@ -8,7 +8,7 @@
     <!-- Pattern Lab base styles -->
     <link rel="stylesheet" href="../../css/pattern-scaffolding.css?{{ cacheBuster }}" media="all" />
     <!-- Component styles -->
-    <link rel="stylesheet" href="../../css/style.css?{{ cacheBuster }}" media="all" />
+    <link rel="stylesheet" href="../../css/styles.bundle.css?{{ cacheBuster }}" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     {{ patternLabHead | raw }}
