POWR-233 Output the banner region

--- a/web/themes/custom/stormy/templates/layout/page.html.twig
+++ b/web/themes/custom/stormy/templates/layout/page.html.twig
@@ -95,6 +95,11 @@
         </nav>
       {% endblock %}
     </header>
+    {% if page.banner_top %}
+      <header id="banner" class="banner" role="banner" aria-label="{{ 'Top Banner'|t }}">
+          {{ page.banner_top }}
+      </header>
+    {% endif %}
     {% if page.highlighted %}
       <div class="highlighted">
         <aside class="{{ container }} section clearfix" role="complementary">
