--- a/web/themes/custom/stormy/css/groups.css
+++ b/web/themes/custom/stormy/css/groups.css
@@ -1,18 +1,23 @@
-.view-group-content-banner {
+.view-group-content-banner,
+.view-group-banner {
   padding: .5rem 1rem;
 }
 
-.view-group-content-banner .views-row {
+.view-group-content-banner .views-row,
+.view-group-banner .views-row {
   display: flex;
   align-items: center;
 }
 
-.view-group-content-banner .views-row .views-field img {
+.view-group-content-banner .views-row .views-field img,
+.view-group-banner .views-row .views-field img {
   margin-right: 1rem;
 }
 
 .view-group-content-banner .views-field a,
-.view-group-content-banner .views-field a:hover {
+.view-group-content-banner .views-field a:hover,
+.view-group-banner .views-field a,
+.view-group-banner .views-field a:hover {
   color: inherit;
   font-size: 2rem;
   text-decoration: none;
