POWR-233 Default banner styling

--- a/web/themes/custom/stormy/css/groups.css
+++ b/web/themes/custom/stormy/css/groups.css
@@ -23,6 +23,12 @@
   text-decoration: none;
 }
 
+.banner {
+  background-color: #f8f9fa;
+  color: #505050;
+  min-height: 70px;
+}
+
 .transportation .banner {
   background-color: #FF8226;
   color: white;
