POWR-248 Create site footer pattern

--- a/web/themes/custom/rain/source/css/styles.bundle.css
+++ b/web/themes/custom/rain/source/css/styles.bundle.css
@@ -930,7 +930,7 @@ figure {
 
 .accordion-term {
   border-top: 1px solid #e5e5e5;
-  color: #4c4c4c;
+  color: #505050;
   cursor: pointer;
   display: block;
   font-size: 1rem;
@@ -1250,7 +1250,7 @@ figure {
       border-top: 1px solid #f8f9fa; } }
 
 .main-menu__link {
-  color: #4c4c4c;
+  color: #505050;
   display: block;
   font-size: 1.2rem;
   line-height: 1.5;
@@ -1262,7 +1262,7 @@ figure {
   @media (min-width: 43em) {
     .main-menu__link {
       border-bottom: none;
-      color: #4c4c4c;
+      color: #505050;
       display: inline-block;
       font-size: 1.1rem;
       padding: 1rem 2rem;
@@ -1279,7 +1279,7 @@ figure {
           color: #f8f9fa; } }
 
 .main-menu__link--sub {
-  color: #4c4c4c;
+  color: #505050;
   padding-left: 3rem;
   font-weight: normal; }
   @media (min-width: 43em) {
@@ -1306,7 +1306,7 @@ figure {
     .toggle-expand {
       display: none; } }
   .toggle-expand--open {
-    background-color: #4c4c4c; }
+    background-color: #505050; }
 
 .toggle-expand__text {
   display: block;
