POWR-248 Create site footer pattern

--- a/web/themes/custom/rain/source/_patterns/00-utilities/_mixins.scss
+++ b/web/themes/custom/rain/source/_patterns/00-utilities/_mixins.scss
@@ -3,12 +3,12 @@
 
 /// Mixin - Clearfix.
 /// Adds clearfix based on http://bourbon.io/docs/#clearfix
-/// use example =   @include cleafix
+/// use example =   @include clearfix
 
 @mixin clearfix {
   &::after {
     clear: both;
-    content: "";
+    content: '';
     display: table;
   }
 }
@@ -25,19 +25,19 @@
 /// Precede Text with SVG icon
 @mixin with-icon {
   background-size: cover;
-  content: "";
+  content: '';
   display: inline-block;
-  margin-right: 0.1em;
+  margin: 0 0.1em 0 0;
   padding: 0.8em;
 }
 
 /// Mixin - Wrapper
 /// Outer container mixin for large screens
 @mixin wrapper {
+  @include clearfix;
+
   margin: 0 auto;
   max-width: $max-width;
-
-  @include clearfix;
 }
 
 /// Mixin - More Link
@@ -49,7 +49,7 @@
     text-decoration: none;
 
     &::before {
-      content: "»";
+      content: '»';
       font-size: 1.2rem;
       margin-right: 0.2em;
     }
@@ -65,7 +65,7 @@
   text-decoration: none;
 
   &::before {
-    content: "«";
+    content: '«';
     font-size: 1.2rem;
     margin-right: 0.2em;
   }
@@ -90,4 +90,31 @@
 /// Mixin - Standard Margin
 @mixin margin {
   margin-bottom: 1em;
+}
+
+@mixin p-reset-list {
+  list-style-type: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+@mixin p-link-underline {
+  @include transition(border, 0.4s, ease);
+
+  border-bottom: 3px solid transparent;
+  color: $color-link;
+  padding-bottom: 1px;
+  padding-top: 3px;
+  text-decoration: none;
+
+  &:hover {
+    border-bottom: 3px solid $color-link;
+  }
+}
+
+@mixin p-container {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1320px;
+  padding: 0 20px;
 }
