--- a/web/themes/custom/rain/source/css/styles.bundle.css
+++ b/web/themes/custom/rain/source/css/styles.bundle.css
@@ -524,9 +524,9 @@ template {
   flex-wrap: wrap; }
 
 .link {
-  color: #1b5998; }
+  color: #1B5998; }
   .link:hover {
-    color: #1b5998; }
+    color: #F8F9FA; }
 
 .h1, .text-long h1 {
   color: inherit;
@@ -613,7 +613,7 @@ body {
 
 .blockquote, .text-long blockquote {
   font-style: italic;
-  border-left: solid 3px #999;
+  border-left: solid 3px #F8F9FA;
   margin-left: 1em;
   padding-left: 1em; }
 
@@ -719,7 +719,7 @@ figure {
   max-width: 32em; }
   .form-item::after {
     clear: both;
-    content: "";
+    content: '';
     display: table; }
 
 .form-item__label {
@@ -737,13 +737,13 @@ figure {
   .form-item__textfield:focus {
     border-color: #000; }
   .form-item__textfield::-webkit-input-placeholder {
-    color: #999; }
+    color: #F8F9FA; }
   .form-item__textfield:-moz-placeholder {
-    color: #999; }
+    color: #F8F9FA; }
   .form-item__textfield::-moz-placeholder {
-    color: #999; }
+    color: #F8F9FA; }
   .form-item__textfield:-ms-input-placeholder {
-    color: #999; }
+    color: #F8F9FA; }
 
 .form-item__description {
   margin-top: 0.3em; }
@@ -930,7 +930,7 @@ figure {
 
 .accordion-term {
   border-top: 1px solid #e5e5e5;
-  color: #4c4c4c;
+  color: #505050;
   cursor: pointer;
   display: block;
   font-size: 1rem;
@@ -987,9 +987,9 @@ figure {
     .card__title__link:hover {
       color: inherit; }
   .card__title-link {
-    color: #1b5998; }
+    color: #1B5998; }
     .card__title-link:hover {
-      color: #1b5998; }
+      color: #F8F9FA; }
 
 .card__subtitle {
   color: inherit;
@@ -1011,9 +1011,9 @@ figure {
   margin: 0.7em 0 1em; }
 
 .card__link {
-  color: #1b5998; }
+  color: #1B5998; }
   .card__link:hover {
-    color: #1b5998; }
+    color: #F8F9FA; }
 
 .card__button {
   background-color: #000;
@@ -1058,9 +1058,9 @@ figure {
       color: inherit; }
 
 .info-box__link {
-  color: #1b5998; }
+  color: #1B5998; }
   .info-box__link:hover {
-    color: #1b5998; }
+    color: #F8F9FA; }
 
 .breadcrumb {
   list-style: none;
@@ -1072,7 +1072,7 @@ figure {
 .breadcrumb__link:link,
 .breadcrumb__link:visited,
 .breadcrumb__link:focus {
-  color: #999;
+  color: #F8F9FA;
   text-decoration: none; }
 
 .breadcrumb__link:hover {
@@ -1090,6 +1090,24 @@ figure {
 
 .breadcrumb_link:active {
   color: #bbb; }
+
+.p__footer-links {
+  list-style-type: none;
+  margin: 0;
+  padding-left: 0; }
+  .p__footer-links__item {
+    margin-bottom: 1.125em; }
+    .p__footer-links__item:last-child {
+      margin-bottom: 0; }
+  .p__footer-links__link {
+    transition: border 0.4s ease;
+    border-bottom: 3px solid transparent;
+    color: #1B5998;
+    padding-bottom: 1px;
+    padding-top: 3px;
+    text-decoration: none; }
+    .p__footer-links__link:hover {
+      border-bottom: 3px solid #1B5998; }
 
 .inline-menu {
   list-style: none;
@@ -1166,7 +1184,7 @@ figure {
       background-color: #000;
       transition: all 0.2s; }
       .main-menu--sub:hover .main-menu__link--sub {
-        color: #999; }
+        color: #F8F9FA; }
         .main-menu--sub:hover .main-menu__link--sub.active, .main-menu--sub:hover .main-menu__link--sub:active, .main-menu--sub:hover .main-menu__link--sub:hover {
           color: #fff;
           background-color: #000; } }
@@ -1229,10 +1247,10 @@ figure {
   .main-menu__item--sub {
     display: block; }
     .main-menu__item--sub:not(:first-child) {
-      border-top: 1px solid #999; } }
+      border-top: 1px solid #F8F9FA; } }
 
 .main-menu__link {
-  color: #4c4c4c;
+  color: #505050;
   display: block;
   font-size: 1.2rem;
   line-height: 1.5;
@@ -1244,7 +1262,7 @@ figure {
   @media (min-width: 43em) {
     .main-menu__link {
       border-bottom: none;
-      color: #4c4c4c;
+      color: #505050;
       display: inline-block;
       font-size: 1.1rem;
       padding: 1rem 2rem;
@@ -1258,15 +1276,15 @@ figure {
       .main-menu__link:hover {
         color: #fff; }
         .main-menu__link:hover::after {
-          color: #999; } }
+          color: #F8F9FA; } }
 
 .main-menu__link--sub {
-  color: #4c4c4c;
+  color: #505050;
   padding-left: 3rem;
   font-weight: normal; }
   @media (min-width: 43em) {
     .main-menu__link--sub {
-      color: #999;
+      color: #F8F9FA;
       display: block;
       padding: 0.33333rem 1rem; } }
 
@@ -1277,18 +1295,18 @@ figure {
   padding-left: 4rem; }
 
 .toggle-expand {
-  color: #1b5998;
+  color: #1B5998;
   display: inline-block;
   padding: 1rem;
   text-decoration: none;
   width: 100%; }
   .toggle-expand:hover {
-    color: #1b5998; }
+    color: #F8F9FA; }
   @media (min-width: 43em) {
     .toggle-expand {
       display: none; } }
   .toggle-expand--open {
-    background-color: #4c4c4c; }
+    background-color: #505050; }
 
 .toggle-expand__text {
   display: block;
@@ -1367,7 +1385,7 @@ figure {
 .pager__link,
 .pager__link:link,
 .pager__link:visited {
-  color: #999;
+  color: #F8F9FA;
   font-weight: 600;
   text-decoration: none; }
   .pager__link.is-active, .pager__link:hover,
@@ -1385,7 +1403,7 @@ figure {
     display: none; }
   .pager__link--next::before,
   .pager__link--prev::before {
-    border: 8px solid #999;
+    border: 8px solid #F8F9FA;
     border-bottom: 6px solid transparent;
     border-right: 7px solid transparent;
     border-top: 6px solid transparent;
@@ -1399,7 +1417,7 @@ figure {
 
 .pager__link--prev::before {
   border-left-color: transparent;
-  border-right-color: #999; }
+  border-right-color: #F8F9FA; }
 
 .pager__link--prev:hover::before {
   border-left-color: transparent;
@@ -1521,11 +1539,30 @@ figure {
       .info-box--grid-item:nth-child(2n) {
         margin-right: 0; } }
 
+.p__footer {
+  padding: 1em 0;
+  background-color: #F8F9FA;
+  color: #505050; }
+  .p__footer__container {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1320px;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%; }
+  .p__footer__info {
+    display: flex;
+    flex-direction: column;
+    align-items: end; }
+  .p__footer__copyright p {
+    margin: 0 0 1em; }
+
 .header {
-  background-color: #046a38;
-  border-top: 0.5rem solid #418fde;
-  border-bottom: 0.5rem solid #f0ad4e;
-  color: #999; }
+  background-color: #046A38;
+  border-top: 0.5rem solid #418FDE;
+  border-bottom: 0.5rem solid #FFB81C;
+  color: #F8F9FA; }
   .header .link {
     color: #ccc; }
     .header .link .h1, .header .link .text-long h1, .text-long .header .link h1 {
@@ -1549,7 +1586,7 @@ figure {
   max-width: 75em; }
   .example::after {
     clear: both;
-    content: "";
+    content: '';
     display: table; }
 
 .header {
@@ -1557,15 +1594,13 @@ figure {
   width: 100%;
   margin: 0 auto; }
 
-.main,
-.footer {
+.main {
   margin: 0 auto;
   max-width: 75em;
   margin-bottom: 4em; }
-  .main::after,
-  .footer::after {
+  .main::after {
     clear: both;
-    content: "";
+    content: '';
     display: table; }
 
 @media (min-width: 75em) {
