POWR-248 Create Drupal footer templates

--- a/web/themes/custom/rain/templates/layout/region--footer.html.twig
+++ b/web/themes/custom/rain/templates/layout/region--footer.html.twig
@@ -13,3 +13,8 @@
  */
 #}
 {% extends "@components/site/site-footer/site-footer.twig" %}
+{% set site_footer_image = '/themes/custom/rain/source/images/cityseal.png' %}
+{% block footer %}
+  {{ content }}
+{% endblock %}
+{% block footerPL %}{% endblock %}
