POWR-246 Update Drupal templates to reference updated pattern naming

--- a/web/themes/custom/rain/templates/content/search-result.html.twig
+++ b/web/themes/custom/rain/templates/content/search-result.html.twig
@@ -56,4 +56,4 @@
  * @see template_preprocess_search_result()
  */
 #}
-{% include "@molecules/_search-result.twig" %}
+{% include "@elements/_search-result.twig" %}
