--- a/web/themes/custom/rain/templates/fields/field--text-long.html.twig
+++ b/web/themes/custom/rain/templates/fields/field--text-long.html.twig
@@ -39,4 +39,4 @@
  @TODO: THIS CAN BE REMOVED IF BEM CLASSES CAN BE APPLIED IN WYSIWYG
 #}
 
-{% include "@atoms/_field-wysiwyg.twig" %}
+{% include "@elements/_field-wysiwyg.twig" %}
