--- a/web/themes/custom/rain/templates/form/input.html.twig
+++ b/web/themes/custom/rain/templates/form/input.html.twig
@@ -10,4 +10,4 @@
  * @see template_preprocess_input()
  */
 #}
-{% include "@atoms/05-forms/_input.twig" %}
+{% include "@elements/05-forms/_input.twig" %}
