--- a/web/themes/custom/rain/templates/form/radios.html.twig
+++ b/web/themes/custom/rain/templates/form/radios.html.twig
@@ -10,4 +10,4 @@
  * @see template_preprocess_radios()
  */
 #}
-{% include "@atoms/05-forms/_radios.twig" %}
+{% include "@elements/05-forms/_radios.twig" %}
