--- a/web/themes/custom/rain/templates/navigation/pager.html.twig
+++ b/web/themes/custom/rain/templates/navigation/pager.html.twig
@@ -29,4 +29,4 @@
  * @see template_preprocess_pager()
  */
 #}
-{% include "@molecules/pager/pager.twig" %}
+{% include "@elements/pager/pager.twig" %}
