--- a/web/themes/custom/rain/source/_patterns/02-elements/menus/footer-menu/footer-menu.twig
+++ b/web/themes/custom/rain/source/_patterns/02-elements/menus/footer-menu/footer-menu.twig
@@ -1,4 +1,4 @@
-{% include "@components/menus/_menu.twig" with {
+{% include "@elements/menus/_menu.twig" with {
   menu_class: 'p__footer-links'
 } %}
 
