--- a/web/themes/custom/rain/source/_patterns/00-utilities/global/01-colors/_color-vars.scss
+++ b/web/themes/custom/rain/source/_patterns/00-utilities/global/01-colors/_color-vars.scss
@@ -2,7 +2,7 @@ $white: #fff;
 $near-white: #f2f2f2;
 $gray-lightest: #e5e5e5;
 $gray-lighter: #ccc;
-$gray-light: #999;
+$gray-light: #f8f9fa;
 $gray: #666;
 $gray-dark: #4c4c4c;
 $gray-darker: #333;
