--- a/web/themes/custom/rain/source/css/styles.bundle.css
+++ b/web/themes/custom/rain/source/css/styles.bundle.css
@@ -524,9 +524,9 @@ template {
   flex-wrap: wrap; }
 
 .link {
-  color: #1B5998; }
+  color: #1b5998; }
   .link:hover {
-    color: #F8F9FA; }
+    color: #1b5998; }
 
 .h1, .text-long h1 {
   color: inherit;
@@ -613,7 +613,7 @@ body {
 
 .blockquote, .text-long blockquote {
   font-style: italic;
-  border-left: solid 3px #F8F9FA;
+  border-left: solid 3px #f8f9fa;
   margin-left: 1em;
   padding-left: 1em; }
 
@@ -737,13 +737,13 @@ figure {
   .form-item__textfield:focus {
     border-color: #000; }
   .form-item__textfield::-webkit-input-placeholder {
-    color: #F8F9FA; }
+    color: #f8f9fa; }
   .form-item__textfield:-moz-placeholder {
-    color: #F8F9FA; }
+    color: #f8f9fa; }
   .form-item__textfield::-moz-placeholder {
-    color: #F8F9FA; }
+    color: #f8f9fa; }
   .form-item__textfield:-ms-input-placeholder {
-    color: #F8F9FA; }
+    color: #f8f9fa; }
 
 .form-item__description {
   margin-top: 0.3em; }
@@ -930,7 +930,7 @@ figure {
 
 .accordion-term {
   border-top: 1px solid #e5e5e5;
-  color: #505050;
+  color: #4c4c4c;
   cursor: pointer;
   display: block;
   font-size: 1rem;
@@ -987,9 +987,9 @@ figure {
     .card__title__link:hover {
       color: inherit; }
   .card__title-link {
-    color: #1B5998; }
+    color: #1b5998; }
     .card__title-link:hover {
-      color: #F8F9FA; }
+      color: #1b5998; }
 
 .card__subtitle {
   color: inherit;
@@ -1011,9 +1011,9 @@ figure {
   margin: 0.7em 0 1em; }
 
 .card__link {
-  color: #1B5998; }
+  color: #1b5998; }
   .card__link:hover {
-    color: #F8F9FA; }
+    color: #1b5998; }
 
 .card__button {
   background-color: #000;
@@ -1058,9 +1058,9 @@ figure {
       color: inherit; }
 
 .info-box__link {
-  color: #1B5998; }
+  color: #1b5998; }
   .info-box__link:hover {
-    color: #F8F9FA; }
+    color: #1b5998; }
 
 .breadcrumb {
   list-style: none;
@@ -1072,7 +1072,7 @@ figure {
 .breadcrumb__link:link,
 .breadcrumb__link:visited,
 .breadcrumb__link:focus {
-  color: #F8F9FA;
+  color: #f8f9fa;
   text-decoration: none; }
 
 .breadcrumb__link:hover {
@@ -1102,12 +1102,12 @@ figure {
   .p__footer-links__link {
     transition: border 0.4s ease;
     border-bottom: 3px solid transparent;
-    color: #1B5998;
+    color: #1b5998;
     padding-bottom: 1px;
     padding-top: 3px;
     text-decoration: none; }
     .p__footer-links__link:hover {
-      border-bottom: 3px solid #1B5998; }
+      border-bottom: 3px solid #1b5998; }
 
 .inline-menu {
   list-style: none;
@@ -1184,7 +1184,7 @@ figure {
       background-color: #000;
       transition: all 0.2s; }
       .main-menu--sub:hover .main-menu__link--sub {
-        color: #F8F9FA; }
+        color: #f8f9fa; }
         .main-menu--sub:hover .main-menu__link--sub.active, .main-menu--sub:hover .main-menu__link--sub:active, .main-menu--sub:hover .main-menu__link--sub:hover {
           color: #fff;
           background-color: #000; } }
@@ -1247,10 +1247,10 @@ figure {
   .main-menu__item--sub {
     display: block; }
     .main-menu__item--sub:not(:first-child) {
-      border-top: 1px solid #F8F9FA; } }
+      border-top: 1px solid #f8f9fa; } }
 
 .main-menu__link {
-  color: #505050;
+  color: #4c4c4c;
   display: block;
   font-size: 1.2rem;
   line-height: 1.5;
@@ -1262,7 +1262,7 @@ figure {
   @media (min-width: 43em) {
     .main-menu__link {
       border-bottom: none;
-      color: #505050;
+      color: #4c4c4c;
       display: inline-block;
       font-size: 1.1rem;
       padding: 1rem 2rem;
@@ -1276,15 +1276,15 @@ figure {
       .main-menu__link:hover {
         color: #fff; }
         .main-menu__link:hover::after {
-          color: #F8F9FA; } }
+          color: #f8f9fa; } }
 
 .main-menu__link--sub {
-  color: #505050;
+  color: #4c4c4c;
   padding-left: 3rem;
   font-weight: normal; }
   @media (min-width: 43em) {
     .main-menu__link--sub {
-      color: #F8F9FA;
+      color: #f8f9fa;
       display: block;
       padding: 0.33333rem 1rem; } }
 
@@ -1295,18 +1295,18 @@ figure {
   padding-left: 4rem; }
 
 .toggle-expand {
-  color: #1B5998;
+  color: #1b5998;
   display: inline-block;
   padding: 1rem;
   text-decoration: none;
   width: 100%; }
   .toggle-expand:hover {
-    color: #F8F9FA; }
+    color: #1b5998; }
   @media (min-width: 43em) {
     .toggle-expand {
       display: none; } }
   .toggle-expand--open {
-    background-color: #505050; }
+    background-color: #4c4c4c; }
 
 .toggle-expand__text {
   display: block;
@@ -1385,7 +1385,7 @@ figure {
 .pager__link,
 .pager__link:link,
 .pager__link:visited {
-  color: #F8F9FA;
+  color: #f8f9fa;
   font-weight: 600;
   text-decoration: none; }
   .pager__link.is-active, .pager__link:hover,
@@ -1403,7 +1403,7 @@ figure {
     display: none; }
   .pager__link--next::before,
   .pager__link--prev::before {
-    border: 8px solid #F8F9FA;
+    border: 8px solid #f8f9fa;
     border-bottom: 6px solid transparent;
     border-right: 7px solid transparent;
     border-top: 6px solid transparent;
@@ -1417,7 +1417,7 @@ figure {
 
 .pager__link--prev::before {
   border-left-color: transparent;
-  border-right-color: #F8F9FA; }
+  border-right-color: #f8f9fa; }
 
 .pager__link--prev:hover::before {
   border-left-color: transparent;
@@ -1541,8 +1541,8 @@ figure {
 
 .p__footer {
   padding: 1em 0;
-  background-color: #F8F9FA;
-  color: #505050; }
+  background-color: #f8f9fa;
+  color: #4c4c4c; }
   .p__footer__container {
     margin-right: auto;
     margin-left: auto;
@@ -1559,10 +1559,10 @@ figure {
     margin: 0 0 1em; }
 
 .header {
-  background-color: #046A38;
-  border-top: 0.5rem solid #418FDE;
-  border-bottom: 0.5rem solid #FFB81C;
-  color: #F8F9FA; }
+  background-color: #046a38;
+  border-top: 0.5rem solid #418fde;
+  border-bottom: 0.5rem solid #f0ad4e;
+  color: #f8f9fa; }
   .header .link {
     color: #ccc; }
     .header .link .h1, .header .link .text-long h1, .text-long .header .link h1 {
@@ -1648,3 +1648,5 @@ figure {
   .pl #icons .icon {
     height: 4rem;
     width: 4rem; }
+
+/*# sourceMappingURL=styles.bundle.css.map*/
