POWR-284 set some base typograpy.

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -6939,7 +6939,8 @@ header #search-block-form {
  * Footer Styling.
  */
 .site-footer {
-  padding: 1rem 0; }
+  padding: 1rem 0;
+  background: #f8f9fa; }
   .site-footer .layout-container {
     padding: 0 1rem; }
 
