--- a/web/themes/custom/cloudy/scss/typography.scss
+++ b/web/themes/custom/cloudy/scss/typography.scss
@@ -1,53 +1,37 @@
 /* TYPOGRAPHY */
 
-
 /* Google Fonts */
 
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,300italic,400italic");
 @import url("fonts.googleapis.com/css?family=Merriweather:400,700");
-// font families
-$font-opensans: 'Open Sans',
-Arial,
-Verdana,
-sans-serif;
-$font-merriweather: 'Merriweather',
-Arial,
-Verdana,
-sans-serif;
-// Fonts
-//
-// Font, line-height, and color for body text, headings, and more.
-$font-family-sans-serif: "Open Sans",
--apple-system,
-system-ui,
-BlinkMacSystemFont,
-"Segoe UI",
-Roboto,
-"Helvetica Neue",
-Arial,
-sans-serif !default;
-$font-family-serif: Merriweather,
-"Times New Roman",
-Times,
-serif !default;
-$font-family-monospace: Menlo,
-Monaco,
-Consolas,
-"Liberation Mono",
-"Courier New",
-monospace;
-$font-family-base: $font-family-sans-serif;
-$font-size-base: 1rem; // Assumes the browser default, typically `16px`
-$font-size-lg: 1.25rem;
-$font-size-sm: .875rem;
-$font-size-xs: .75rem;
-$font-weight-normal: normal;
-$font-weight-bold: bold;
-$font-weight-base: $font-weight-normal;
-$line-height-base: 1.5;
-$font-size-h1: 2.5rem;
-$font-size-h2: 2rem;
-$font-size-h3: 1.75rem;
-$font-size-h4: 1.5rem;
-$font-size-h5: 1.25rem;
-$font-size-h6: 1rem;
+
+//** Font, line-height, and color for body text, headings, and more.
+$font-family-sans-serif:  "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-family-serif:       "Merriweather", Georgia, "Times New Roman", Times, serif !default;
+
+//** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
+$font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
+
+$font-family-base:        $font-family-sans-serif !default;
+
+$font-size-base:          16px !default;
+$font-size-large:         ceil(($font-size-base * 1.25)) !default;
+$font-size-small:         ceil(($font-size-base * 0.85)) !default;
+
+$font-size-h1:            floor(($font-size-base * 2.6)) !default;
+$font-size-h2:            floor(($font-size-base * 2.15)) !default;
+$font-size-h3:            ceil(($font-size-base * 1.7)) !default;
+$font-size-h4:            ceil(($font-size-base * 1.25)) !default;
+$font-size-h5:            $font-size-base !default;
+$font-size-h6:            ceil(($font-size-base * 0.85)) !default;
+
+//** Unit-less `line-height` for use in components like buttons.
+$line-height-base:        1.428571429 !default;
+//** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
+$line-height-computed:    floor(($font-size-base * $line-height-base)) !default;
+
+//** By default, this inherits from the `<body>`.
+$headings-font-family:    $font-family-serif !default;
+$headings-font-weight:    500 !default;
+$headings-line-height:    1.1 !default;
+$headings-color:          inherit !default;
