POWR-284 checking in work before moving Barrio to a composer installed path.

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -6907,9 +6907,6 @@ header #search-block-form {
 
 /* ------------------ Sidebar ----------------- */
 .sidebar .block {
-  border-style: solid;
-  border-width: 1px;
-  padding: 1rem 1rem;
   margin: 0 0 1rem; }
   .sidebar .block .content {
     font-size: 1rem;
@@ -6939,8 +6936,7 @@ header #search-block-form {
  * Footer Styling.
  */
 .site-footer {
-  padding: 1rem 0;
-  background: #f8f9fa; }
+  padding: 1rem 0; }
   .site-footer .layout-container {
     padding: 0 1rem; }
 
@@ -7680,7 +7676,7 @@ a {
   background: #046a38 !important; }
 
 .site-footer {
-  background: #418fde !important; }
+  background: #f8f9fa !important; }
 
 .menu--main li a {
   color: #046a38; }
