--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -26,7 +26,7 @@ a {
 }
 
 .site-footer {
-    background: $accent-shade !important;
+    background: $gray-100 !important;
 }
 
 .menu--main li a {
